A few more changes.  Fixes overlap with IE.
git-svn-id: file:///usr/local/svn/trunk@2612 215d8e1a-9f62-4c3a-9943-246481b8efb3

--- a/engine/skins/default/handheld.css
+++ b/engine/skins/default/handheld.css
@@ -47,6 +47,10 @@ table.historyTable td, table.historyTable tr {
   display: block;
 }
 
+.historyWidgetsTop {
+  // padding-top: 2em;
+}
+
 .columnControls {
   display: none !important;
 }
@@ -55,6 +59,10 @@ table.historyTable > tr.rowOdd td, table.historyTable > tr.rowOdd,
 table.historyTable > tr.rowEven td, table.historyTable > tr.rowEven {
   display: block !important;
   width: 100% !important;
+}
+
+.rowOdd td {
+  border: none !important;
 }
 
 tr.rowHeader {
@@ -75,6 +83,10 @@ td.historyNavigatorTop {
   text-align: left !important;
 }
 
+.historyNavigatorTop form {
+  display:inline;
+}
+
 td.historyNavigatorTop div.refreshLink {
   display: none;
 }
@@ -86,4 +98,20 @@ td.menuIndent {
 th.historyLabel {
   display: block;
   text-align: left;
+}
+
+.shell {
+  border: 1px;
+}
+
+.shellTopCenter, .shellTopRight, .shellTopLeft {
+  display: none;
+}
+
+.shellRight, .shellLeft {
+  display: none;
+}
+
+.shellBottomCenter, .shellBottomRight, .shellBottomLeft {
+  display: none;
 }
